@@ -278,6 +278,15 @@
     <userinput>./install_rivendell.sh --server</userinput>
   </para>
   <para>
+    For a pure client setup (one that uses a central server for the database
+    and audio store), first create a host entry for the new client in
+    RDAdmin on the server (RDAdmin->ManageHosts->Add), then start the
+    script with the command:
+  </para>
+  <para>
+    <userinput>./install_rivendell.sh --client</userinput>
+  </para>
+  <para>
     Depending upon the speed of the system and your Internet connection,
     installation can take between several minutes to an hour or more.
   </para>
